--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Satellite: Prospects to Leads</title>
+  </head>
+  <body style="margin: 0px">
+    <iframe src="https://staticakshay.wixsite.com/satellite" frameborder="0" style="height:100vh; width:100vw"  style="border:none;" title="Satellite"></iframe>
+  </body>
+</html>
